# wup-web

./: .gitignore  LICENSE.md  README.md
.github/workflows/: release-notify.yml
src-tauri/: Cargo (Eoliann's conflicted copy 2025-09-26).toml  Cargo.toml  fix-build.ps1  package-lock.json  package.json  tauri.conf (Eoliann's conflicted copy 2025-09-26).json  tauri.conf.json
src-tauri/src/: main (Eoliann's conflicted copy 2025-09-26).rs  main.js  main.rs  tailwind.config.js
