[package]
name = "wup-web"
version = "1.0.3"
description = "WhatsApp Web Client"
license = "MIT"
homepage = "https://github.com/eoliann/wup-web"
repository = "https://github.com/eoliann/wup-web"
bugs = "https://github.com/eoliann/wup-web/issues"
authors = ["eOL"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
